--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "payid-utils",
+  "name": "@payid-org/payid-utils",
   "version": "0.1.0",
   "description": "A TypeScript library providing PayID utility functions",
   "homepage": "https://github.com/payid-org/payid-utils#readme",
@@ -26,11 +26,13 @@
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
     "@fintechstudios/eslint-plugin-chai-as-promised": "^3.0.2",
+    "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "@xpring-eng/eslint-config-base": "^0.9.0",
+    "chai": "^4.2.0",
     "eslint": "^7.3.1",
     "eslint-plugin-array-func": "^3.1.6",
     "eslint-plugin-eslint-comments": "^3.2.0",
