--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@payid-org/payid-utils",
+  "name": "@payid-org/utils",
   "version": "0.1.0",
   "description": "A TypeScript library providing PayID utility functions",
-  "homepage": "https://github.com/payid-org/payid-utils#readme",
+  "homepage": "https://github.com/payid-org/utils#readme",
   "bugs": {
-    "url": "https://github.com/payid-org/payid-utils/issues"
+    "url": "https://github.com/payid-org/utils/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/payid-org/payid-utils.git"
+    "url": "git+https://github.com/payid-org/utils.git"
   },
   "license": "Apache-2.0",
   "author": "",
@@ -29,15 +29,16 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
-    "@xpring-eng/eslint-config-base": "^0.9.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "@xpring-eng/eslint-config-base": "^0.11.0",
+    "@xpring-eng/eslint-config-mocha": "^1.0.0",
     "chai": "^4.2.0",
-    "eslint": "^7.3.1",
+    "eslint": "^7.5.0",
     "eslint-plugin-array-func": "^3.1.6",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^28.5.1",
+    "eslint-plugin-jsdoc": "^30.0.3",
     "eslint-plugin-mocha": "^7.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
