--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "nyc mocha 'test/**/*.test.ts'"
   },
   "dependencies": {
-    "jose": "^1.27.2"
+    "jose": "^1.27.2",
+    "pem-jwk": "^2.0.0"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
@@ -32,6 +33,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
+    "@types/pem-jwk": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "@xpring-eng/eslint-config-base": "^0.11.0",
