--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "nyc mocha 'test/**/*.test.ts'"
   },
   "dependencies": {
-    "jose": "^1.27.2"
+    "jose": "^1.27.3",
+    "node-forge": "^0.9.1"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
@@ -32,6 +33,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
+    "@types/node-forge": "^0.9.4",
     "@types/pem-jwk": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
@@ -52,7 +54,7 @@
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
     "tsc-watch": "^4.2.9",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.7"
   },
   "engines": {
     "node": ">=12.0.0",
