--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "lintNoFix": "eslint . --ext .ts --max-warnings 0 && prettier --check '**/*.{md,json}'",
     "test": "nyc mocha 'test/**/*.test.ts'"
   },
+  "dependencies": {
+    "jose": "^1.27.2"
+  },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
     "@fintechstudios/eslint-plugin-chai-as-promised": "^3.0.2",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
+    "@types/pem-jwk": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "@xpring-eng/eslint-config-base": "^0.11.0",
