--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "payid": "./dist/cli.js"
+  },
   "files": [
     "dist/*"
   ],
@@ -24,8 +27,10 @@
     "test": "nyc mocha 'test/**/*.test.ts'"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "jose": "^1.27.3",
-    "node-forge": "^0.9.1"
+    "node-forge": "^0.9.1",
+    "vorpal": "^1.12.0"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
@@ -35,6 +40,7 @@
     "@types/node": "^14.0.14",
     "@types/node-forge": "^0.9.4",
     "@types/pem-jwk": "^1.5.0",
+    "@types/vorpal": "^1.12.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "@xpring-eng/eslint-config-base": "^0.11.0",
