--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "payid": "./dist/cli.js"
+    "payid-utils": "./dist/cli.js"
   },
   "files": [
     "dist/*"
