--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
     "node": ">=12.0.0",
     "npm": ">=6",
     "yarn": "please use npm"
+  },
+  "resolutions": {
+    "lodash": "^4.17.19"
   }
 }
