--- a/package.json
+++ b/package.json
@@ -14,18 +14,25 @@
   "author": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "payid-utils": "./dist/cli.js"
+  },
   "files": [
     "dist/*"
   ],
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "build": "rm -rf dist && tsc --project .",
     "lint": "eslint . --ext .ts --fix --max-warnings 0 && prettier --write '**/*.{md,json}'",
     "lintNoFix": "eslint . --ext .ts --max-warnings 0 && prettier --check '**/*.{md,json}'",
     "test": "nyc mocha 'test/**/*.test.ts'"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "beautify-json": "^1.0.1",
     "jose": "^1.27.3",
-    "node-forge": "^0.9.1"
+    "node-forge": "^0.9.1",
+    "vorpal": "^1.12.0"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
@@ -35,6 +42,7 @@
     "@types/node": "^14.0.14",
     "@types/node-forge": "^0.9.4",
     "@types/pem-jwk": "^1.5.0",
+    "@types/vorpal": "^1.12.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "@xpring-eng/eslint-config-base": "^0.11.0",
@@ -49,7 +57,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-tsdoc": "^0.2.5",
-    "mocha": "^8.0.1",
+    "mocha": "^8.1.1",
     "nyc": "^15.1.0",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
@@ -60,5 +68,8 @@
     "node": ">=12.0.0",
     "npm": ">=6",
     "yarn": "please use npm"
+  },
+  "resolutions": {
+    "lodash": "^4.17.19"
   }
 }
