--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "rm -rf dist && tsc --project .",
     "lint": "eslint . --ext .ts --fix --max-warnings 0 && prettier --write '**/*.{md,json}'",
     "lintNoFix": "eslint . --ext .ts --max-warnings 0 && prettier --check '**/*.{md,json}'",
+    "prepare": "npm run build",
     "test": "nyc mocha 'test/**/*.test.ts'"
   },
   "dependencies": {
