--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "beautify-json": "^1.0.1",
-    "jose": "^1.27.3",
-    "node-forge": "^0.9.1"
+    "jose": "^1.27.3"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
@@ -36,8 +35,6 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
-    "@types/node-forge": "^0.9.4",
-    "@types/pem-jwk": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "@xpring-eng/eslint-config-base": "^0.11.0",
