drop verifiable tools for cbdc demo so this can work in the browser
we were having issues because jose v1.x.x does not work in the browser.
we only need to payid sdk functions (not the verifiable payid ones).

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "test": "nyc mocha 'test/**/*.test.ts'"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "jose": "^1.27.3"
+    "axios": "^0.19.2"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
