--- a/package.json
+++ b/package.json
@@ -19,26 +19,27 @@
   ],
   "scripts": {
     "build": "rm -rf dist && tsc --project .",
+    "clean": "tsc --build --clean",
     "lint": "eslint . --ext .ts --fix --max-warnings 0 && prettier --write '**/*.{md,json}'",
     "lintNoFix": "eslint . --ext .ts --max-warnings 0 && prettier --check '**/*.{md,json}'",
     "prepare": "npm run build",
     "test": "nyc mocha 'test/**/*.test.ts'"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "jose": "^1.27.3"
+    "jose": "^3.4.0"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
     "@fintechstudios/eslint-plugin-chai-as-promised": "^3.0.2",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.14",
+    "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "@xpring-eng/eslint-config-base": "^0.11.0",
     "@xpring-eng/eslint-config-mocha": "^1.0.0",
     "chai": "^4.2.0",
+    "check-imports": "^0.1.12",
     "eslint": "^7.5.0",
     "eslint-plugin-array-func": "^3.1.6",
     "eslint-plugin-eslint-comments": "^3.2.0",
